# anygen-search-cli

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: PROVIDERS.md  SKILL.md  USAGE.md
hsearch/: __init__.py  __main__.py  cache.py  cli.py  config.py  dedup.py  extract.py  filters.py  models.py  output.py  router.py
hsearch/providers/: __init__.py  base.py  brave.py  exa.py  firecrawl.py  jina.py  serper.py  tavily.py
tests/: conftest.py  test_cli.py  test_config.py  test_dedup.py  test_providers_mock.py  test_router.py  test_v02.py  test_v022_doc_updates.py
