[project]
name = "anygen-search-cli"
version = "0.2.1"
description = "Unified CLI over 6 commercial search APIs (Brave, Serper, Exa, Tavily, Firecrawl, Jina) — answer mode, multi-provider dedup, content extraction."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AnyGenIO" }]
license = { text = "MIT" }
keywords = ["search", "cli", "agent", "rag", "brave", "serper", "exa", "tavily", "firecrawl", "jina"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
hsearch = "hsearch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hsearch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
